release prep - add ability to package and run the server from a jar file