@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>server-distribution</artifactId>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <name>Power TAC distribution</name>
   <description>Support for download and execution of the Power TAC server</description>
@@ -15,20 +15,24 @@
   <parent>
     <groupId>org.powertac</groupId>
     <artifactId>powertac-server</artifactId>
-    <version>1.9.1-SNAPSHOT</version>
-    <relativePath />
+    <version>1.10.0-SNAPSHOT</version>
+    <!-- <relativePath /> -->
   </parent>
 
   <properties>
-    <powertac-server.version>1.9.1-SNAPSHOT</powertac-server.version>
-    <jetty.version>9.3.11.v20160721</jetty.version>
+    <powertac-server.version>1.10.0-SNAPSHOT</powertac-server.version>
     <syst.args></syst.args>
     <exec.args></exec.args>
   </properties>
 
-  
+  <!-- install repo for local testing -->
   <!-- Sonatype OSS repo for resolving snapshot dependencies -->
   <repositories>
+    <repository>
+      <id>local</id>
+      <name>installation-repo</name>
+      <url>file://${user.home}/.m2/repository</url>
+    </repository>
     <repository>
       <id>sonatype</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
@@ -38,6 +42,88 @@
 
   <profiles>
     <!-- Command-line setup -->
+    <profile>
+      <id>local</id>
+      <repositories>
+	<repository>
+          <id>local</id>
+          <name>installation-repo</name>
+          <url>file://${user.home}/.m2/repository</url>
+	</repository>
+      </repositories>
+    </profile>
+
+    <profile>
+      <id>package</id>
+      <dependencies>
+	<dependency>
+	  <groupId>org.powertac</groupId>
+	  <artifactId>server-main</artifactId>
+	  <version>1.10.0-SNAPSHOT</version>
+	</dependency>
+
+	<!-- Spring dependency to support packaging -->
+	<dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-maven-plugin</artifactId>
+	  <version>2.5.7</version>
+	</dependency>
+      </dependencies>
+
+      <build>
+	<pluginManagement>
+	  <plugins>
+            <plugin>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-maven-plugin</artifactId>
+              <version>2.5.7</version>
+            </plugin>
+	  </plugins>
+	</pluginManagement>
+	
+	<plugins>
+	  <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+		<goals>
+		  <goal>repackage</goal>
+		</goals>
+		<configuration>
+		  <mainClass>org.powertac.server.PowerTacServer</mainClass>
+		  <finalName>powertac-server</finalName>
+		</configuration>
+              </execution>
+            </executions>
+	  </plugin>
+
+	  <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+	  </plugin>
+
+	  <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>java</executable>
+              <commandlineArgs>-server -Xmx2048m -Dserver.pomId=${project.parent.version} -classpath %classpath ${syst.args} org.powertac.server.PowerTacServer ${exec.args}</commandlineArgs>
+            </configuration>
+	  </plugin>
+	</plugins>
+      </build>
+    </profile>
 
     <profile>
       <id>cli</id>
@@ -71,7 +157,7 @@
             </executions>
             <configuration>
               <executable>java</executable>
-              <commandlineArgs>-server -Xmx1024m -Dserver.pomId=${project.parent.version} -classpath %classpath ${syst.args} org.powertac.server.PowerTacServer ${exec.args}</commandlineArgs>
+              <commandlineArgs>-server -Xmx2048m -Dserver.pomId=${project.parent.version} -classpath %classpath ${syst.args} org.powertac.server.PowerTacServer ${exec.args}</commandlineArgs>
             </configuration>
           </plugin>
         </plugins>
